--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@ content="$CHOMPY - $CHOMPY" class="s123-js-pjax"> <meta property="og:site_name" 
 <audio autoplay controls loop>
 	<source src="https://www.televisiontunes.com/uploads/audio/Jaws.mp3" type="audio/ogg">
 	<source src="https://www.televisiontunes.com/uploads/audio/Jaws.mp3" type="audio/mpeg">
-</audio>    
+</audio>  
+<img src="https://i.ibb.co/NjZJYDX/My-Coin.gif" alt="My-Coin" border="0" width="120" height="130"></a><img src="https://i.ibb.co/NjZJYDX/My-Coin.gif" alt="My-Coin" border="0" width="120" height="130"></a>
 </div></div> <div class="container" data-aos="fade-up"> 
 <div class="responsive-handler fr-view breakable"> <div class="s123-editor"><h3 style="display: block; text-align: center;"><strong id="isPasted"><u><span style="color: rgb(85, 57, 130);"><style type="text/css">
 .maxbutton {
