--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@ content="$CHOMPY - $CHOMPY" class="s123-js-pjax"> <meta property="og:site_name" 
 <audio autoplay controls loop>
 	<source src="https://www.televisiontunes.com/uploads/audio/Jaws.mp3" type="audio/ogg">
 	<source src="https://www.televisiontunes.com/uploads/audio/Jaws.mp3" type="audio/mpeg">
-</audio>  
+</audio> 
+<style>#dexscreener-embed{position:relative;width:100%;padding-bottom:125%;}@media(min-width:1400px){#dexscreener-embed{padding-bottom:65%;}}#dexscreener-embed iframe{position:absolute;width:100%;height:100%;top:0;left:0;border:0;}</style><div id="dexscreener-embed"><iframe src="https://dexscreener.com/solana/G6vbr5QUC2LEsCpS718foBiCCsWpuxWpY8YxYYV3f7rT?embed=1&theme=dark"></iframe></div>
+
 <img src="https://i.ibb.co/NjZJYDX/My-Coin.gif" alt="My-Coin" border="0" width="120" height="130"></a><img src="https://i.ibb.co/NjZJYDX/My-Coin.gif" alt="My-Coin" border="0" width="120" height="130"></a>
 </div></div> <div class="container" data-aos="fade-up"> 
 <div class="responsive-handler fr-view breakable"> <div class="s123-editor"><h3 style="display: block; text-align: center;"><strong id="isPasted"><u><span style="color: rgb(85, 57, 130);"><style type="text/css">
@@ -185,6 +187,7 @@ content="$CHOMPY - $CHOMPY" class="s123-js-pjax"> <meta property="og:site_name" 
 .maxbutton:hover .mb-text {
   color: #505ac7;
 }
+
 </style>
 <a class="maxbutton" target="_blank" rel="noopener" href="https://chompy.printify.me/products" data-maxbuttoncounter="{&quot;button_id&quot;:215719,&quot;url&quot;:&quot;https:\/\/chompy.printify.me\/products&quot;,&quot;check&quot;:&quot;xXcqwNbF&quot;}" data-maxbuttonpage="{&quot;id&quot;:false,&quot;type&quot;:false}"><span class='mb-text' >STORE</span></a>
 </style>
