--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ content="$CHOMPY - $CHOMPY" class="s123-js-pjax"> <meta property="og:site_name" 
 	<source src="https://www.televisiontunes.com/uploads/audio/Jaws.mp3" type="audio/ogg">
 	<source src="https://www.televisiontunes.com/uploads/audio/Jaws.mp3" type="audio/mpeg">
 </audio> 
+<style>#dexscreener-embed{position:relative;width:100%;padding-bottom:125%;}@media(min-width:1400px){#dexscreener-embed{padding-bottom:65%;}}#dexscreener-embed iframe{position:absolute;width:75%;height:75%;top:0;left:0;border:0;}</style><div id="dexscreener-embed"><iframe src="https://dexscreener.com/solana/G6vbr5QUC2LEsCpS718foBiCCsWpuxWpY8YxYYV3f7rT?embed=1&theme=dark"></iframe></div>
 
 <img src="https://i.ibb.co/NjZJYDX/My-Coin.gif" alt="My-Coin" border="0" width="120" height="130"></a><img src="https://i.ibb.co/NjZJYDX/My-Coin.gif" alt="My-Coin" border="0" width="120" height="130"></a>
 </div></div> <div class="container" data-aos="fade-up"> 
