--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<meta name="keywords" content="" "> <link rel="canonical" href="/" class="s123-js-pjax"/> <style>/* latin-ext */
+<a href="https://www.dextools.io/app/en/solana/pair-explorer/G6vbr5QUC2LEsCpS718foBiCCsWpuxWpY8YxYYV3f7rT?t=1722380086830”"><img align=”right:1000px”> <img src="https://i.im.ge/2024/07/31/VBr8HD.DEXTools-Isotype-blue-official-color.th.png"width="50"height="50"style="position:relative; left:500px;"><meta name="keywords" content="" "> <meta name="keywords" content="" "> <link rel="canonical" href="/" class="s123-js-pjax"/> <style>/* latin-ext */
 @font-face {
   font-family: 'Caladea';
   font-style: italic;
@@ -95,6 +95,7 @@ content="$CHOMPY - $CHOMPY" class="s123-js-pjax"> <meta property="og:site_name" 
   background-color: #505ac7;
   box-shadow: 0px 0px 2px 0px #333333;
 }
+
 .maxbutton:hover {
   border-color: #505ac7;
   background-color: white;
