--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<a href="https://www.dextools.io/app/en/solana/pair-explorer/G6vbr5QUC2LEsCpS718foBiCCsWpuxWpY8YxYYV3f7rT?t=1722380086830”"> <img src="https://i.im.ge/2024/07/31/VBr8HD.DEXTools-Isotype-blue-official-color.th.png"width="100"height="100"style="position:relative; left:500px;"><meta name="keywords" content="" "> 
-<meta name="keywords" content="" "> <meta name="keywords" content="" "> <link rel="canonical" href="/" class="s123-js-pjax"/> <style>/* latin-ext */
+<meta name="keywords" content="" "> <link rel="canonical" href="/" class="s123-js-pjax"/> <style>/* latin-ext */
 @font-face {
   font-family: 'Caladea';
   font-style: italic;
@@ -84,6 +83,7 @@ content="$CHOMPY - $CHOMPY" class="s123-js-pjax"> <meta property="og:site_name" 
 <img src="https://i.ibb.co/NjZJYDX/My-Coin.gif" alt="My-Coin" border="0" width="120" height="130"></a><img src="https://i.ibb.co/NjZJYDX/My-Coin.gif" alt="My-Coin" border="0" width="120" height="130"></a>
 </div></div> <div class="container" data-aos="fade-up"> 
 <div class="responsive-handler fr-view breakable"> <div class="s123-editor"><h3 style="display: block; text-align: center;"><strong id="isPasted"><u><span style="color: rgb(85, 57, 130);"><style type="text/css">
+
 .maxbutton {
   position: relative;
   text-decoration: none;
@@ -192,6 +192,25 @@ content="$CHOMPY - $CHOMPY" class="s123-js-pjax"> <meta property="og:site_name" 
 
 </style>
 <a class="maxbutton" target="_blank" rel="noopener" href="https://chompy.printify.me/products" data-maxbuttoncounter="{&quot;button_id&quot;:215719,&quot;url&quot;:&quot;https:\/\/chompy.printify.me\/products&quot;,&quot;check&quot;:&quot;xXcqwNbF&quot;}" data-maxbuttonpage="{&quot;id&quot;:false,&quot;type&quot;:false}"><span class='mb-text' >STORE</span></a>
+<!DOCTYPE html> 
+<html> 
+<head> 
+  <style> 
+    .button { 
+      background-image: url('https://i.im.ge/2024/07/31/VBr8HD.DEXTools-Isotype-blue-official-color.th.png'); 
+      width: 50px; 
+      height: 50px; 
+      background-size: cover; 
+      cursor: pointer; 
+    } 
+  </style> 
+</head> 
+<body> 
+  <a href="https://www.dextools.io/app/en/solana/pair-explorer/G6vbr5QUC2LEsCpS718foBiCCsWpuxWpY8YxYYV3f7rT?t=1722380086830"> 
+    <div class="button"></div> 
+  </a> 
+</body> 
+</html> 
 </style>
 <a class="maxbutton" href="https://chompydoc.netlify.app/" data-maxbuttoncounter="{&quot;button_id&quot;:769188,&quot;url&quot;:&quot;https:\/\/chompydoc.netlify.app\/&quot;,&quot;check&quot;:&quot;TEsgT19A&quot;}" data-maxbuttonpage="{&quot;id&quot;:false,&quot;type&quot;:false}"><span class='mb-text' >Docs</span></a>
 </style>
